# ENIGMA

./: .gitignore  AGENT_LOG.md  AGENT_PROMPT.md  COMPLETE_SETUP_INDEX.md  CONTRIBUTING.md  DELIVERABLES.md  DETERMINISTIC_PIPELINE_SUMMARY.md  Dockerfile.blockchain  ENIGMA_FULL_SYSTEM.md  LICENSE  MASTER_PROMPT_ADDENDUM.md  METRICS_IMPLEMENTATION_SUMMARY.md  METRICS_README_MASTER.md  README.md  README_SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  SECURITY_DOCUMENTATION_INDEX.md  SECURITY_IMPLEMENTATION_GUIDE.md  SECURITY_SUMMARY.md  SKILLS_PROMPT.md  THESIS_METRICS_GUIDE.md  auto_detect_hardware.ps1  auto_detect_hardware.sh  capture_test.json  docker-compose.local.yml  docker-compose.yml  enigma_sim_key.pem  firmware_task_gemini_cli.md  gemini.md  hardhat.config.js  lavalamp_agent_prompt.md  package-lock.json  package.json  trng-dashboard.html
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  Dockerfile  enigma.db  package-lock.json  package.json  requirements.txt  server.js
cache/: solidity-files-cache.json
contracts/: RecordStorage.sol  Storage.sol
database/: entropy_pipeline_schema.sql  schema.sql
docs/: API.md  (+23 more)
firmware/main/: CMakeLists.txt  Enigma_pro.c  aes_encryption.c  aes_encryption.h  atecc608a.c  atecc608a.h  camera.c  camera.h  config.h  crypto.c  crypto.h  entropy.c  entropy.h  idf_component.yml  image_chunking.c  image_chunking.h  main.c  network.c  network.h  ntp.c  ntp.h  ota_handler.c  ota_handler.h  rtc.c  rtc.h  storage.c  storage.h  uart.c  uart.h  utils.c  utils.h  websocket_client.c  websocket_client.h  wifi.c  wifi.h
(+164 files in other folders)
