idf_component_register(
    SRCS
        "Enigma_pro.c"
        "entropy.c"
        "crypto.c"
        "network.c"
        "storage.c"
        "rtc.c"
        "atecc608a.c"
        "camera.c"
        "aes_encryption.c"
    INCLUDE_DIRS "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_http_client
        mbedtls
        esp_timer
        esp_hw_support
        json
        driver
        esp_camera
        esp_aes
)
